hphp/test/zend/good/ext/standard/tests/strings/sprintf_f_3.php.skipif
<?php if(false == setlocale(LC_NUMERIC, "is_IS", "is_IS.UTF-8")) print "skip icelandic locale not supported"; ?>