hphp/test/zend/bad/ext/pgsql/tests/13pg_select_9.php.skipif
<?php
include("skipif.inc");
skip_server_version('9.0', '<');
?>